// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, compact: true, counter: false, resize: vertical, theme: dark 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, calc(1rem + 16px*2 + 2px*2));
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, unset);
  max-height: var(--p-textarea-max-height, unset);
  display: block;
  width: 100%;
  height: auto;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #88898C;
  border-radius: 4px;
  background: transparent;
  text-indent: 0;
  color: #FBFCFF;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: max(2px, calc(12px * var(--p-internal-textarea-scaling, 0.5))) max(2px, calc(16px * var(--p-internal-textarea-scaling, 0.5)));
}
textarea:focus {
  border-color: #FBFCFF;
}
textarea:disabled {
  cursor: not-allowed;
  color: #7E7F82;
  border-color: #7E7F82;
  -webkit-text-fill-color: #7E7F82;
}
textarea[readonly] {
  border-color: #404044;
  background: #404044;
}
@media(hover:hover) {
  textarea:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper textarea:not(:disabled):not(:focus):not([readonly]) {
    border-color: #FBFCFF;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #AFB0B3;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(min-width:480px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: -4px;
  }
}

@media(min-width:760px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: -4px;
  }
}

@media(min-width:1300px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: -4px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, compact: true, counter: false, resize: vertical, theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, calc(1rem + 16px*2 + 2px*2));
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, unset);
  max-height: var(--p-textarea-max-height, unset);
  display: block;
  width: 100%;
  height: auto;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: max(2px, calc(12px * var(--p-internal-textarea-scaling, 0.5))) max(2px, calc(16px * var(--p-internal-textarea-scaling, 0.5)));
}
textarea:focus {
  border-color: #010205;
}
textarea:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
textarea[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
@media(hover:hover) {
  textarea:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper textarea:not(:disabled):not(:focus):not([readonly]) {
    border-color: #010205;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media(min-width:480px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: -4px;
  }
}

@media(min-width:760px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: -4px;
  }
}

@media(min-width:1300px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: -4px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: error, compact: false, counter: false, resize: vertical, theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, calc(1rem + 16px*2 + 2px*2));
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, unset);
  max-height: var(--p-textarea-max-height, unset);
  display: block;
  width: 100%;
  height: auto;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #CC1922;
  border-radius: 4px;
  background: transparent;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: max(2px, calc(12px * var(--p-internal-textarea-scaling, 1))) max(2px, calc(16px * var(--p-internal-textarea-scaling, 1)));
}
textarea:focus {
  border-color: #010205;
}
textarea:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
textarea[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
@media(hover:hover) {
  textarea:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper textarea:not(:disabled):not(:focus):not([readonly]) {
    border-color: #951219;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: error, compact: true, counter: false, resize: vertical, theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, calc(1rem + 16px*2 + 2px*2));
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, unset);
  max-height: var(--p-textarea-max-height, unset);
  display: block;
  width: 100%;
  height: auto;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #CC1922;
  border-radius: 4px;
  background: transparent;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: max(2px, calc(12px * var(--p-internal-textarea-scaling, 0.5))) max(2px, calc(16px * var(--p-internal-textarea-scaling, 0.5)));
}
textarea:focus {
  border-color: #010205;
}
textarea:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
textarea[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
@media(hover:hover) {
  textarea:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper textarea:not(:disabled):not(:focus):not([readonly]) {
    border-color: #951219;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: none, compact: false, counter: true, resize: vertical, theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, calc(1rem + 16px*2 + 2px*2));
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, unset);
  max-height: var(--p-textarea-max-height, unset);
  display: block;
  width: 100%;
  height: auto;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: max(2px, calc(12px * var(--p-internal-textarea-scaling, 1))) max(2px, calc(16px * var(--p-internal-textarea-scaling, 1))) calc(calc(6px + 2.125ex) + max(2px, calc(6px * var(--p-internal-textarea-scaling, 1))) * 2 - 4px);
}
textarea:focus {
  border-color: #010205;
}
textarea:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
textarea[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
@media(hover:hover) {
  textarea:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper textarea:not(:disabled):not(:focus):not([readonly]) {
    border-color: #010205;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #6B6D70;
  grid-area: 1/1;
  place-self: flex-end;
  padding: max(2px, calc(6px * var(--p-internal-textarea-scaling, 1))) max(12px, calc((16px + 2px) * var(--p-internal-textarea-scaling, 1)));
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: none, compact: true, counter: true, resize: vertical, theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, calc(1rem + 16px*2 + 2px*2));
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, unset);
  max-height: var(--p-textarea-max-height, unset);
  display: block;
  width: 100%;
  height: auto;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: max(2px, calc(12px * var(--p-internal-textarea-scaling, 0.5))) max(2px, calc(16px * var(--p-internal-textarea-scaling, 0.5))) calc(calc(6px + 2.125ex) + max(2px, calc(6px * var(--p-internal-textarea-scaling, 0.5))) * 2 - 4px);
}
textarea:focus {
  border-color: #010205;
}
textarea:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
textarea[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
@media(hover:hover) {
  textarea:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper textarea:not(:disabled):not(:focus):not([readonly]) {
    border-color: #010205;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #6B6D70;
  grid-area: 1/1;
  place-self: flex-end;
  padding: max(2px, calc(6px * var(--p-internal-textarea-scaling, 0.5))) max(12px, calc((16px + 2px) * var(--p-internal-textarea-scaling, 0.5)));
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: success, compact: false, counter: false, resize: vertical, theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, calc(1rem + 16px*2 + 2px*2));
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, unset);
  max-height: var(--p-textarea-max-height, unset);
  display: block;
  width: 100%;
  height: auto;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #197E10;
  border-radius: 4px;
  background: transparent;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: max(2px, calc(12px * var(--p-internal-textarea-scaling, 1))) max(2px, calc(16px * var(--p-internal-textarea-scaling, 1)));
}
textarea:focus {
  border-color: #010205;
}
textarea:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
textarea[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
@media(hover:hover) {
  textarea:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper textarea:not(:disabled):not(:focus):not([readonly]) {
    border-color: #0E4809;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: #197E10;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: false, state: success, compact: true, counter: true, resize: vertical, theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, calc(1rem + 16px*2 + 2px*2));
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, unset);
  max-height: var(--p-textarea-max-height, unset);
  display: block;
  width: 100%;
  height: auto;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #197E10;
  border-radius: 4px;
  background: transparent;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: max(2px, calc(12px * var(--p-internal-textarea-scaling, 0.5))) max(2px, calc(16px * var(--p-internal-textarea-scaling, 0.5))) calc(calc(6px + 2.125ex) + max(2px, calc(6px * var(--p-internal-textarea-scaling, 0.5))) * 2 - 4px);
}
textarea:focus {
  border-color: #010205;
}
textarea:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
textarea[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
@media(hover:hover) {
  textarea:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper textarea:not(:disabled):not(:focus):not([readonly]) {
    border-color: #0E4809;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #6B6D70;
  grid-area: 1/1;
  place-self: flex-end;
  padding: max(2px, calc(6px * var(--p-internal-textarea-scaling, 0.5))) max(12px, calc((16px + 2px) * var(--p-internal-textarea-scaling, 0.5)));
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: #197E10;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: error, compact: false, counter: false, resize: vertical, theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, calc(1rem + 16px*2 + 2px*2));
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, unset);
  max-height: var(--p-textarea-max-height, unset);
  display: block;
  width: 100%;
  height: auto;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #CC1922;
  border-radius: 4px;
  background: transparent;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: max(2px, calc(12px * var(--p-internal-textarea-scaling, 1))) max(2px, calc(16px * var(--p-internal-textarea-scaling, 1)));
}
textarea:focus {
  border-color: #010205;
}
textarea:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
textarea[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
@media(hover:hover) {
  textarea:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper textarea:not(:disabled):not(:focus):not([readonly]) {
    border-color: #951219;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: error, compact: true, counter: false, resize: vertical, theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, calc(1rem + 16px*2 + 2px*2));
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, unset);
  max-height: var(--p-textarea-max-height, unset);
  display: block;
  width: 100%;
  height: auto;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #CC1922;
  border-radius: 4px;
  background: transparent;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: max(2px, calc(12px * var(--p-internal-textarea-scaling, 0.5))) max(2px, calc(16px * var(--p-internal-textarea-scaling, 0.5)));
}
textarea:focus {
  border-color: #010205;
}
textarea:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
textarea[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
@media(hover:hover) {
  textarea:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper textarea:not(:disabled):not(:focus):not([readonly]) {
    border-color: #951219;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: none, compact: false, counter: true, resize: vertical, theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, calc(1rem + 16px*2 + 2px*2));
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, unset);
  max-height: var(--p-textarea-max-height, unset);
  display: block;
  width: 100%;
  height: auto;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: max(2px, calc(12px * var(--p-internal-textarea-scaling, 1))) max(2px, calc(16px * var(--p-internal-textarea-scaling, 1))) calc(calc(6px + 2.125ex) + max(2px, calc(6px * var(--p-internal-textarea-scaling, 1))) * 2 - 4px);
}
textarea:focus {
  border-color: #010205;
}
textarea:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
textarea[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
@media(hover:hover) {
  textarea:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper textarea:not(:disabled):not(:focus):not([readonly]) {
    border-color: #010205;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #6B6D70;
  grid-area: 1/1;
  place-self: flex-end;
  padding: max(2px, calc(6px * var(--p-internal-textarea-scaling, 1))) max(12px, calc((16px + 2px) * var(--p-internal-textarea-scaling, 1)));
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: none, compact: true, counter: true, resize: vertical, theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, calc(1rem + 16px*2 + 2px*2));
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, unset);
  max-height: var(--p-textarea-max-height, unset);
  display: block;
  width: 100%;
  height: auto;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: max(2px, calc(12px * var(--p-internal-textarea-scaling, 0.5))) max(2px, calc(16px * var(--p-internal-textarea-scaling, 0.5))) calc(calc(6px + 2.125ex) + max(2px, calc(6px * var(--p-internal-textarea-scaling, 0.5))) * 2 - 4px);
}
textarea:focus {
  border-color: #010205;
}
textarea:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
textarea[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
@media(hover:hover) {
  textarea:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper textarea:not(:disabled):not(:focus):not([readonly]) {
    border-color: #010205;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #6B6D70;
  grid-area: 1/1;
  place-self: flex-end;
  padding: max(2px, calc(6px * var(--p-internal-textarea-scaling, 0.5))) max(12px, calc((16px + 2px) * var(--p-internal-textarea-scaling, 0.5)));
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: success, compact: false, counter: false, resize: vertical, theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, calc(1rem + 16px*2 + 2px*2));
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, unset);
  max-height: var(--p-textarea-max-height, unset);
  display: block;
  width: 100%;
  height: auto;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #197E10;
  border-radius: 4px;
  background: transparent;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: max(2px, calc(12px * var(--p-internal-textarea-scaling, 1))) max(2px, calc(16px * var(--p-internal-textarea-scaling, 1)));
}
textarea:focus {
  border-color: #010205;
}
textarea:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
textarea[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
@media(hover:hover) {
  textarea:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper textarea:not(:disabled):not(:focus):not([readonly]) {
    border-color: #0E4809;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: #197E10;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: false, hideLabel: true, state: success, compact: true, counter: false, resize: vertical, theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, calc(1rem + 16px*2 + 2px*2));
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, unset);
  max-height: var(--p-textarea-max-height, unset);
  display: block;
  width: 100%;
  height: auto;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #197E10;
  border-radius: 4px;
  background: transparent;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: max(2px, calc(12px * var(--p-internal-textarea-scaling, 0.5))) max(2px, calc(16px * var(--p-internal-textarea-scaling, 0.5)));
}
textarea:focus {
  border-color: #010205;
}
textarea:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
textarea[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
@media(hover:hover) {
  textarea:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper textarea:not(:disabled):not(:focus):not([readonly]) {
    border-color: #0E4809;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: #197E10;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isReadonly: true, hideLabel: false, state: none, compact: true, counter: true, resize: vertical, theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, calc(1rem + 16px*2 + 2px*2));
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, unset);
  max-height: var(--p-textarea-max-height, unset);
  display: block;
  width: 100%;
  height: auto;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: max(2px, calc(12px * var(--p-internal-textarea-scaling, 0.5))) max(2px, calc(16px * var(--p-internal-textarea-scaling, 0.5))) calc(calc(6px + 2.125ex) + max(2px, calc(6px * var(--p-internal-textarea-scaling, 0.5))) * 2 - 4px);
}
textarea:focus {
  border-color: #010205;
}
textarea:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
textarea[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
@media(hover:hover) {
  textarea:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper textarea:not(:disabled):not(:focus):not([readonly]) {
    border-color: #010205;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.counter {
  pointer-events: none;
  max-width: 100%;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #535457;
  grid-area: 1/1;
  place-self: flex-end;
  padding: max(2px, calc(6px * var(--p-internal-textarea-scaling, 0.5))) max(12px, calc((16px + 2px) * var(--p-internal-textarea-scaling, 0.5)));
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: true, isReadonly: false, hideLabel: true, state: error, compact: false, counter: false, resize: vertical, theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
textarea {
  resize: vertical;
  field-sizing: var(--p-textarea-field-sizing, unset);
  min-width: var(--p-textarea-min-width, calc(1rem + 16px*2 + 2px*2));
  max-width: var(--p-textarea-max-width, unset);
  min-height: var(--p-textarea-min-height, unset);
  max-height: var(--p-textarea-max-height, unset);
  display: block;
  width: 100%;
  height: auto;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 2px solid #CC1922;
  border-radius: 4px;
  background: transparent;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  padding: max(2px, calc(12px * var(--p-internal-textarea-scaling, 1))) max(2px, calc(16px * var(--p-internal-textarea-scaling, 1)));
}
textarea:focus {
  border-color: #010205;
}
textarea:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
textarea[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
@media(hover:hover) {
  textarea:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper textarea:not(:disabled):not(:focus):not([readonly]) {
    border-color: #951219;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: grid;
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: not-allowed;
  color: #949598;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}"
`;
